--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,8 @@ node_modules/
 dist/
 artifacts/*
 !artifacts/.gitkeep
+baselines/*
+!baselines/.gitkeep
 .env
 .env.*
 !.env.example
@@ -9,3 +11,4 @@ coverage/
 playwright-report/
 test-results/
 .DS_Store
+.claude/
