--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -4,14 +4,11 @@ updates:
     directory: "/"
     schedule:
       interval: "monthly"
-    open-pull-requests-limit: 3
+    open-pull-requests-limit: 1
     groups:
       all-dependencies:
         patterns:
           - "*"
-        update-types:
-          - "minor"
-          - "patch"
 
   - package-ecosystem: "github-actions"
     directory: "/"
@@ -19,6 +16,6 @@ updates:
       interval: "monthly"
     open-pull-requests-limit: 1
     groups:
-      github-actions:
+      all-actions:
         patterns:
           - "*"
